탑 팝업 호버 추가

--- a/css/style.css
+++ b/css/style.css
@@ -19,22 +19,30 @@ a{text-decoration: none;color: #373737;}
 button{background: none;border: none;margin:0;padding: 0;}
 
 /* 상단팝업메뉴 */
-.top{width: 100%;height: 44px;
-    background: #ffbc4f;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;}
-.top .pop{width: 1194px;
-          height: 44px;
-          margin:0 auto;
-          position: relative;}
+.top{
+      width: 100%;
+      height: 44px;
+      background: #ffbc4f;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+}
+.top .pop{
+      width: 1194px;
+      height: 44px;
+      margin:0 auto;
+      position: relative;
+      }
 .top .pop p{color: #fff;
             text-align: center;
             line-height: 44px;}  
-.top .pop span{right: 0px;
-              position: absolute;
-              top: 50%;
-              transform: translate(0,-50%);}   
+.top .pop a{
+      right: 0px;
+      position: absolute;
+      top: 50%;
+      transform: translate(0,-50%);
+}   
+
 
 /* 메뉴-네비 */
 .white{width: 100%;
