--- a/css/style.css
+++ b/css/style.css
@@ -262,12 +262,13 @@ button{background: none;border: none;margin:0;padding: 0;}
 /* 중간띠배너 */
 .mid_tie{
             width: 100%;
-            height: 280px;
-            background: url('/gelatto/image/sub_red.png') no-repeat center;
+            height: 400px;
+            background: url('/gelatto/image/sub.png') no-repeat center/cover;
+            background-attachment: fixed;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
             }
-.tie_cont{padding-top: 100px;}
+.tie_cont{padding-top: 135px;}
 .mid_tie span{
       font-size: 48px;
       color: #fff;}
