--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ button{background: none;border: none;margin:0;padding: 0;}
 .cart{position: relative;}
 .cart a{
       display: block;
-      background: url('/gelatto/image/hd02_bag.png') no-repeat 0 0px;
+      background: url('/image/hd02_bag.png') no-repeat 0 0px;
       width: 32px;
       height: 36px;
       }              
@@ -263,7 +263,7 @@ button{background: none;border: none;margin:0;padding: 0;}
 .mid_tie{
             width: 100%;
             height: 400px;
-            background: url('/gelatto/image/sub.png') no-repeat center/cover;
+            background: url('/image/sub.png') no-repeat center/cover;
             background-attachment: fixed;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
@@ -306,7 +306,7 @@ button{background: none;border: none;margin:0;padding: 0;}
       width:100%;
       height:48px;
       margin: 0 auto;
-      background: url('/gelatto/image/un.png') no-repeat 0;
+      background: url('/image/un.png') no-repeat 0;
       }
       
 .sns_center ul{
@@ -342,18 +342,18 @@ button{background: none;border: none;margin:0;padding: 0;}
 /* 아이콘처리 */
 .four .cs {
       width:280px;
-      background: url('/gelatto/image/foot_1.png')no-repeat 0;
+      background: url('/image/foot_1.png')no-repeat 0;
       margin-right: 59px}
 .four .bank {
       width:274px;
-      background: url('/gelatto/image/foot_2.png')no-repeat 0;
+      background: url('/image/foot_2.png')no-repeat 0;
       margin-right: 30px}
 .four .deli {
       width:300px;
-      background: url('/gelatto/image/foot_3.png')no-repeat 0;
+      background: url('/image/foot_3.png')no-repeat 0;
       margin-right: 50px}
 .four .commu{width:175px;
-      background: url('/gelatto/image/foot_4.png')no-repeat 0;
+      background: url('/image/foot_4.png')no-repeat 0;
       margin-right: 0px;}
 .four .commu .text{width: 86px;}
 
