--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ button{background: none;border: none;margin:0;padding: 0;}
 .mid_tie{
             width: 100%;
             height: 400px;
-            background: url('../image/sub.png') no-repeat center/cover;
+            background: url('/gelatto/image/sub.png') no-repeat center/cover;
             background-attachment: fixed;
             text-align: center;
             font-family: 'Times New Roman', Times, serif;
